--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
             <p>
                 Use these three properties to create a Flexbox row layout.
             </p>
-            <code>
+            <code><pre>
                 .row {
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
                 }
+            </pre>
             </code>
         </section>
 
@@ -41,10 +42,12 @@
                 Use this to create a Flexbox column layout.
             </p>
             <code>
+                <pre>
                 .column { 
                     display: flex;
                     flex-direction: column 
                 }
+                <pre>
             </code>
         </section>
 
@@ -54,11 +57,13 @@
                 Build a 12 column layout using CSS Grid.
             </p>
             <code>
+                <pre>
                 .grid {
                     display:grid:
                     width: 100%;
                     grid-template-columns: repeat (12, 1fr)
                 }
+                <pre>
             </code>
         </section>
 
@@ -68,12 +73,14 @@
                 This will create a background linear gradient from top to bottom.
             </p>
             <code>
+                <pre>
                 .linear-gradient-background{
                     background-image: linear-gradient(
                         rgba(232, 102, 236, 0.3) 0%.
                         rgba(232, 102, 236, 0.6) 100%.
                         );
                 }
+                </pre>
             </code>
         </section>
         <section class="card">
@@ -82,6 +89,7 @@
                 Use transition and box shadows to glow on hover.
             </p>
             <code>
+                <pre>
                 .code-card .card-header{
                     border-radius: 8px;
                     transition: all 0.5s ease-in-out;
@@ -93,6 +101,8 @@
                     rgba(232, 102, 236, 1), 0 0 15px
                     rgba(232, 102, 236, 1);
                 }
+                </pre>
+            </code>
         </section>
         <section class="card">
             <h2>Overlay Card with Title</h2>
@@ -100,10 +110,12 @@
                 Use position properties and negative margins to raise elements higher than their natural starting point.
             </p>
             <code>
+                <pre>
                 .card-header {
                     position: relative;
                     margin-top: -20px;
                 }
+            </pre>
             </code>
         </section>
 
