--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     width: 100%;
                     grid-template-columns: repeat (12, 1fr)
                 }
-                <pre>
+            </pre>
             </code>
         </section>
 
