--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>
                 Use these three properties to create a Flexbox row layout.
             </p>
-            <pre>
+            <span>
             <code>
                 .row {
                     display: flex;
@@ -35,7 +35,7 @@
                     flex-wrap: wrap;
                 }
             </code>
-        </pre>
+        </span>
         </section>
 
         <section class="card">
